<resources>
    <string name="app_name">SilverLinkC</string>

    <string name="upgrade">Upgrade</string>
    <string name="reboot">Reboot</string>
    <string name="degree">°C</string>
    <string name="sensor1">Sensor 1:</string>
    <string name="sensor2">Sensor 2:</string>
    <string name="sensor3">Sensor 3:</string>
    <string name="sensor4">Sensor 4:</string>
    <string name="sensor5">Sensor 5:</string>
    <string name="connecting">Connecting</string>
    <string name="message_wait">Please wait</string>
    <string name="title_connecting">Preparing</string>
    <string name="label_cancel">Cancel</string>
    <string name="crash">App crashed\nCrash report Sent</string>
</resources>
